--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Loki Home • Nature Dash</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="assets/style.css" />
 
   <!-- MQTT over WebSocket -->
   <script src="https://unpkg.com/mqtt/dist/mqtt.min.js"></script>
@@ -222,3 +222,4 @@
   </div>
 </body>
 </html>
+
